--- a/admin-client/src/styles/scss/main.scss
+++ b/admin-client/src/styles/scss/main.scss
@@ -16,3 +16,14 @@ body {
   background: $pri-bg;
   padding: $spacer-small * 1.5;
 }
+
+// Shadow
+.shadow-container {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(black, 0.5);
+}
