--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -221,11 +221,37 @@ html {
   align-items: center;
 }
 
+.home-container {
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  flex-direction: column;
+}
+.home-container__links {
+  width: 100%;
+  margin-bottom: 8rem;
+}
+.home-container__link, .home-container__link-filled {
+  width: 70%;
+  outline: none;
+  border: 2px solid #81d2c7;
+  color: #81d2c7;
+  padding: 0.5rem 0;
+  border-radius: 25px;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  text-align: center;
+  font-size: 0.975rem;
+}
+.home-container__link-filled {
+  background: #81d2c7;
+  color: white;
+}
+
 body {
   font-family: "Oswald", sans-serif;
   overflow-x: hidden;
   background: #003d53;
-  padding: 1.5rem;
 }
 
 .shadow-container {
