--- a/client/src/styles/scss/pages/home/_home.mobile.scss
+++ b/client/src/styles/scss/pages/home/_home.mobile.scss
@@ -1,1 +1,32 @@
 // Home Page Styles
+
+.home-container {
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  flex-direction: column;
+
+  &__links {
+    width: 100%;
+    margin-bottom: $spacer-lg;
+  }
+
+  &__link,
+  &__link-filled {
+    width: 70%;
+    outline: none;
+    border: 2px solid $primary;
+    color: $primary;
+    padding: $spacer-small * 0.5 0;
+    border-radius: 25px;
+    margin-bottom: $spacer-small;
+    text-decoration: none;
+    text-align: center;
+    font-size: $main-fs * 0.65;
+  }
+
+  &__link-filled {
+    background: $primary;
+    color: white;
+  }
+}
