--- a/client/src/styles/scss/main.scss
+++ b/client/src/styles/scss/main.scss
@@ -125,3 +125,41 @@ body {
     box-shadow: 0.2em -0.2em 0 0 currentcolor;
   }
 }
+
+// Error Message
+.toast-container {
+  background: transparent;
+}
+
+.error-message {
+  position: absolute;
+  top: $spacer;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 100;
+  width: 90%;
+  background: $pink;
+  padding: $spacer-small * 0.65;
+  border-radius: 10px;
+  border: 2px solid rgba($red, 0.75);
+
+  &__triangle {
+    margin-right: $spacer-small * 0.5;
+  }
+
+  p {
+    color: $red;
+    font-size: $main-fs * 0.65;
+    line-height: $spacer-small;
+  }
+
+  &__close {
+    outline: none;
+    border: none;
+    background: transparent;
+
+    path {
+      fill: $red;
+    }
+  }
+}
