--- a/client/src/styles/scss/pages/home/_home.mobile.scss
+++ b/client/src/styles/scss/pages/home/_home.mobile.scss
@@ -1,10 +1,13 @@
 // Home Page Styles
-
 .home-container {
   width: 100vw;
   height: 100vh;
   background-size: cover;
   flex-direction: column;
+
+  &__logo {
+    animation: largeLogoFadeIn 2000ms ease;
+  }
 
   &__links {
     width: 100%;
@@ -25,8 +28,51 @@
     font-size: $main-fs * 0.65;
   }
 
+  &__link {
+    opacity: 0;
+    animation: slideInFromRight 1000ms ease forwards 500ms;
+  }
+
   &__link-filled {
     background: $primary;
     color: white;
+    opacity: 0;
+    animation: slideInFromLeft 1000ms ease forwards;
+  }
+}
+
+@keyframes largeLogoFadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.6) rotate3d(2, -1, -1, -0.2turn);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.35) rotate3d(1, 1, 1, 45deg);
+  }
+  100% {
+    transform: scale(1) rotate3d(1, 1, 1, 0deg);
+  }
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-50vw);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(50vw);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
