--- a/admin-client/src/styles/css/main.css
+++ b/admin-client/src/styles/css/main.css
@@ -343,6 +343,18 @@ html {
   border-radius: 25px;
   padding: 0.35rem 2rem;
 }
+.cg-popup__input {
+  outline: none;
+  border: 2px solid #19313a;
+  background: #19313a;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  transition: all 200ms ease-out;
+}
+.cg-popup__input:focus {
+  border: 2px solid #81d2c7;
+}
 .cg-popup .ap-popup__player-name {
   color: white;
 }
