--- a/admin-client/src/styles/scss/pages/home/_home.mobile.scss
+++ b/admin-client/src/styles/scss/pages/home/_home.mobile.scss
@@ -91,7 +91,6 @@
   box-shadow: 0 0 15px 3px rgba(black, 0.15);
   width: 90%;
   height: fit-content;
-  max-height: 70%;
 
   &__title {
     color: white;
@@ -144,7 +143,8 @@
     margin-bottom: $spacer;
   }
 
-  &__submit {
+  &__submit,
+  &__cancel {
     display: block;
     width: 100%;
     outline: none;
@@ -155,6 +155,10 @@
     border-radius: 25px;
     margin: 0 auto;
     margin-top: $spacer-small;
+  }
+
+  &__cancel {
+    background: $red;
   }
 }
 
