--- a/admin-client/src/styles/scss/pages/game/_game.mobile.scss
+++ b/admin-client/src/styles/scss/pages/game/_game.mobile.scss
@@ -11,6 +11,7 @@
       color: $grey;
       font-weight: normal;
       font-size: $main-fs * 0.65;
+      text-transform: capitalize;
     }
   }
 }
