--- a/admin-client/src/styles/scss/pages/home/_home.mobile.scss
+++ b/admin-client/src/styles/scss/pages/home/_home.mobile.scss
@@ -47,6 +47,11 @@
     color: $primary;
     margin-bottom: $spacer-small;
     font-size: $main-fs * 0.8;
+
+    span {
+      color: white;
+      text-transform: capitalize;
+    }
   }
 
   &__game-info {
@@ -80,6 +85,27 @@
     font-weight: bold;
     font-size: $main-fs * 0.65;
     text-decoration: none;
+  }
+
+  &__tabs {
+    margin-bottom: $spacer-small;
+  }
+
+  &__tab {
+    outline: none;
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    margin-right: $spacer-small;
+    border-radius: 5ch;
+    padding: $spacer-small * 0.25 $spacer;
+    text-transform: capitalize;
+    transition: all 200ms ease-out;
+  }
+
+  &__tab-active {
+    background: $dark-bg;
+    border-color: $primary;
   }
 }
 
@@ -236,6 +262,27 @@
 
   &__none {
     color: $primary;
+  }
+
+  &__tabs {
+    gap: $spacer-small;
+    margin-bottom: $spacer-small;
+  }
+
+  &__tab {
+    outline: none;
+    border: 2px solid white;
+    color: white;
+    background: transparent;
+    border-radius: 5px;
+    padding: $spacer-small * 0.25 $spacer;
+    text-transform: capitalize;
+    transition: all 200ms ease-out;
+  }
+
+  &__tab-active {
+    border-color: $primary;
+    background: $primary;
   }
 }
 
