--- a/admin-client/src/styles/css/main.css
+++ b/admin-client/src/styles/css/main.css
@@ -364,7 +364,7 @@ html {
   border-radius: 25px;
   padding: 0.35rem 2rem;
 }
-.cg-popup__input {
+.cg-popup__input, .cg-popup__dropdown {
   outline: none;
   border: 2px solid #19313a;
   background: #19313a;
@@ -373,8 +373,15 @@ html {
   border-radius: 5px;
   transition: all 200ms ease-out;
 }
-.cg-popup__input:focus {
+.cg-popup__input:focus, .cg-popup__dropdown:focus {
   border: 2px solid #81d2c7;
+}
+.cg-popup__dropdown {
+  text-transform: capitalize;
+}
+.cg-popup__dropdown option {
+  color: white;
+  text-transform: capitalize;
 }
 .cg-popup .ap-popup__player-name {
   color: white;
