--- a/admin-client/src/styles/scss/main.scss
+++ b/admin-client/src/styles/scss/main.scss
@@ -5,6 +5,7 @@
 
 // Standalones
 @import "./standalone/navbar/navbar";
+@import "./standalone/status/status";
 
 // Pages
 @import "./pages/home/home.mobile";
